--- a/sql/ejercicios.ipynb
+++ b/sql/ejercicios.ipynb
@@ -10,19 +10,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e1feb36e",
    "metadata": {},
    "outputs": [],
    "source": [
     "## Conectarse a docker y pandas\n",
     "import pandas as pd\n",
+    "import os\n",
     "from sqlalchemy import create_engine"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "id": "a6617c46",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "import cryptography\n",
+    "load_dotenv(\"credenciales_mysql.env\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "12f50370",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user = os.getenv(\"MYSQL_USER\", \"root\")\n",
+    "pwd  = os.environ[\"MYSQL_PASSWORD\"]\n",
+    "host = os.getenv(\"MYSQL_HOST\", \"127.0.0.1\")\n",
+    "port = os.getenv(\"MYSQL_PORT\", \"3306\")\n",
+    "db   = os.getenv(\"MYSQL_DB\", \"sakila\")\n",
+    "\n",
+    "engine = create_engine(f\"mysql+pymysql://{user}:{pwd}@{host}:{port}/{db}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "a42d64e8",
    "metadata": {},
    "outputs": [
@@ -90,21 +130,19 @@
        "4    Animation  66"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "engine = create_engine(\"mysql+pymysql://root:root@127.0.0.1:3306/sakila\")\n",
-    "\n",
     "df = pd.read_sql(\"SELECT category, COUNT(*) AS n FROM film_list GROUP BY category ORDER BY n DESC;\", engine)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "d19bde7f",
    "metadata": {},
    "outputs": [
@@ -256,7 +294,7 @@
        "22                       store"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "b44fbf5b",
    "metadata": {},
    "outputs": [
@@ -389,7 +427,7 @@
        "7       actors                                text  YES         NaN      "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "eb42b7dd",
    "metadata": {},
    "outputs": [
@@ -495,7 +533,7 @@
        "[68 rows x 1 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,6 +541,14 @@
    "source": [
     "pd.read_sql(\"SELECT title FROM film_list WHERE category = 'Documentary';\", engine)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "833b9897",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
