Actualizo nombres y organizacion del respositorio

--- a/sql/mas_ejercicios_practica.ipynb
+++ b/sql/mas_ejercicios_practica.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "1e0171cc",
    "metadata": {},
    "outputs": [],
@@ -20,13 +20,13 @@
     "from dotenv import load_dotenv\n",
     "from sqlalchemy import create_engine\n",
     "\n",
-    "load_dotenv(\"credenciales_mysql.env\")\n",
+    "load_dotenv(\"credenciales/practica.env\")\n",
     "\n",
     "host = os.getenv(\"MYSQL_HOST\", \"127.0.0.1\")\n",
     "port = os.getenv(\"MYSQL_PORT\", \"3306\")\n",
     "db = os.getenv(\"MYSQL_DB\", \"practica_ejercicios\")\n",
     "\n",
-    "user = os.getenv(\"MYSQL_USER\", \"app\")\n",
+    "user = os.getenv(\"MYSQL_USER\")\n",
     "pwd  = os.getenv(\"MYSQL_PASSWORD\")  # SOLO esta\n",
     "\n",
     "\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "d100a21e",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MYSQL_DB existe?: sakila\n"
+      "MYSQL_DB existe?: practica_ejercicios\n"
      ]
     }
    ],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "11d82891",
    "metadata": {},
    "outputs": [
@@ -62,17 +62,16 @@
      "output_type": "stream",
      "text": [
       "cwd: c:\\Users\\workw\\Documents\\practicar programacion\\sql\n",
-      "MYSQL_USER: app\n",
+      "MYSQL_USER: usuario_practica\n",
       "MYSQL_PASSWORD existe?: True\n",
-      "MYSQL_ROOT_PASSWORD existe?: True\n"
+      "MYSQL_ROOT_PASSWORD existe?: False\n"
      ]
     }
    ],
    "source": [
     "print(\"cwd:\", os.getcwd())\n",
     "print(\"MYSQL_USER:\", os.getenv(\"MYSQL_USER\"))\n",
-    "print(\"MYSQL_PASSWORD existe?:\", os.getenv(\"MYSQL_PASSWORD\") is not None)\n",
-    "print(\"MYSQL_ROOT_PASSWORD existe?:\", os.getenv(\"MYSQL_ROOT_PASSWORD\") is not None)\n"
+    "print(\"MYSQL_PASSWORD existe?:\", os.getenv(\"MYSQL_PASSWORD\") is not None)\n"
    ]
   },
   {
@@ -145,7 +144,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Tables_in_sakila</th>\n",
+       "      <th>Tables_in_practica_ejercicios</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -162,9 +161,9 @@
        "</div>"
       ],
       "text/plain": [
-       "  Tables_in_sakila\n",
-       "0         clientes\n",
-       "1        productos"
+       "  Tables_in_practica_ejercicios\n",
+       "0                      clientes\n",
+       "1                     productos"
       ]
      },
      "execution_count": 13,
@@ -311,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "e9da9d47",
    "metadata": {},
    "outputs": [
@@ -877,7 +876,7 @@
        "39          0       ESPAÑA  None  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "ac4b4370",
    "metadata": {},
    "outputs": [
@@ -1046,7 +1045,7 @@
        "16   PALAS DE PING PONG      21.6000       ESPAÑA"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "id": "fa8035e5",
    "metadata": {},
    "outputs": [
@@ -1199,7 +1198,7 @@
        "15  DEPORTES  PALAS DE PING PONG"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "id": "89d663a2",
    "metadata": {},
    "outputs": [
@@ -1218,7 +1217,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MYSQL_DB existe?: sakila\n"
+      "MYSQL_DB existe?: practica_ejercicios\n"
      ]
     }
    ],
