--- a/sql/ejercicios_sakila.ipynb
+++ b/sql/ejercicios_sakila.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "e1feb36e",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "a6617c46",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "12f50370",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "9b6ed892",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "ad2e5b60",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
        "22                       store"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "a42d64e8",
    "metadata": {},
    "outputs": [
@@ -328,32 +328,97 @@
        "      <td>Animation</td>\n",
        "      <td>66</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Action</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>New</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Drama</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Sci-Fi</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Games</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Children</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Classics</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Travel</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Horror</td>\n",
+       "      <td>56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Music</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      category   n\n",
-       "0       Sports  74\n",
-       "1      Foreign  73\n",
-       "2       Family  69\n",
-       "3  Documentary  68\n",
-       "4    Animation  66"
+       "       category   n\n",
+       "0        Sports  74\n",
+       "1       Foreign  73\n",
+       "2        Family  69\n",
+       "3   Documentary  68\n",
+       "4     Animation  66\n",
+       "5        Action  64\n",
+       "6           New  63\n",
+       "7         Drama  62\n",
+       "8        Sci-Fi  61\n",
+       "9         Games  61\n",
+       "10     Children  60\n",
+       "11       Comedy  58\n",
+       "12     Classics  57\n",
+       "13       Travel  57\n",
+       "14       Horror  56\n",
+       "15        Music  51"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_sql(\"SELECT category, COUNT(*) AS n FROM film_list GROUP BY category ORDER BY n DESC;\", engine)\n",
-    "df.head()"
+    "pd.read_sql(\"SELECT category, COUNT(*) AS n FROM film_list GROUP BY category ORDER BY n DESC;\", engine)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "b44fbf5b",
    "metadata": {},
    "outputs": [
@@ -475,7 +540,7 @@
        "7       actors                                text  YES         NaN      "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "778662d9",
    "metadata": {},
    "outputs": [
@@ -581,7 +646,7 @@
        "[1000 rows x 1 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "eb42b7dd",
    "metadata": {},
    "outputs": [
@@ -687,7 +752,7 @@
        "[68 rows x 1 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "833b9897",
    "metadata": {},
    "outputs": [
@@ -903,7 +968,7 @@
        "[323 rows x 8 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "4bc3bdff",
    "metadata": {},
    "outputs": [
@@ -1119,7 +1184,7 @@
        "[323 rows x 8 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1130,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "2026d132",
    "metadata": {},
    "outputs": [
@@ -1212,7 +1277,7 @@
        "3   film_info               text  YES         NaN      "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1223,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "71deb267",
    "metadata": {},
    "outputs": [
@@ -1300,7 +1365,7 @@
        "2  DEFAULT_GENERATED on update CURRENT_TIMESTAMP  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1311,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "f1635869",
    "metadata": {},
    "outputs": [
@@ -1430,7 +1495,7 @@
        "[108 rows x 3 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1442,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "387adc61",
    "metadata": {},
    "outputs": [
@@ -1561,7 +1626,7 @@
        "[108 rows x 3 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1572,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "ea13f97b",
    "metadata": {},
    "outputs": [
@@ -1691,7 +1756,7 @@
        "[107 rows x 3 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
