--- a/sql/mas_ejercicios_practica.ipynb
+++ b/sql/mas_ejercicios_practica.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8aabf40b",
    "metadata": {},
    "outputs": [],
@@ -5502,242 +5502,242 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2000-10-22</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>9255</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>9256</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2002-03-11</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>8750</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>8751</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2002-05-26</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>8674</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>8675</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2000-03-20</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>9471</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>9472</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2000-09-13</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>9294</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>9295</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>2001-03-23</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>9103</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>9104</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>2000-04-11</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>9449</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>9450</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>2000-01-10</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>9541</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>9542</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>2002-09-24</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>8553</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>8554</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>2000-02-04</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>9516</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>9517</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>2001-05-23</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>9042</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>9043</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>2002-08-11</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>8597</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>8598</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>2001-07-03</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>9001</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>9002</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>2000-06-07</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>9392</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>9393</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>2000-04-17</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>9443</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>9444</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>2001-01-04</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>9181</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>9182</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>2001-02-02</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>9152</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>9153</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>2000-03-18</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>9473</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>9474</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>2001-01-15</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>9170</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>9171</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>2001-07-02</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>9002</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>9003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>2001-09-04</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>8938</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>8939</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>2001-07-10</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>8994</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>8995</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>2000-11-11</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>9235</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>9236</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>2001-06-25</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>9009</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>9010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>2000-11-25</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>9221</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>9222</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
        "      <td>2002-04-05</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>8725</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>8726</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>2002-07-04</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>8635</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>8636</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
        "      <td>2001-05-03</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>9062</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>9063</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
        "      <td>2002-02-20</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>8769</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>8770</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
        "      <td>2001-04-15</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>9080</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>9081</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
        "      <td>2002-01-03</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>8817</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>8818</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
        "      <td>2000-02-23</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>9497</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>9498</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
        "      <td>2001-05-27</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>9038</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>9039</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33</th>\n",
        "      <td>2002-08-10</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>8598</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>8599</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>34</th>\n",
        "      <td>2002-07-04</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>8635</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>8636</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35</th>\n",
        "      <td>2002-05-12</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>8688</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>8689</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36</th>\n",
        "      <td>2000-02-14</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>9506</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>9507</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37</th>\n",
        "      <td>2002-09-02</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>8575</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>8576</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38</th>\n",
        "      <td>2002-05-05</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>8695</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>8696</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>39</th>\n",
        "      <td>2002-02-02</td>\n",
-       "      <td>2026-02-23 16:06:45</td>\n",
-       "      <td>8787</td>\n",
+       "      <td>2026-02-24 15:32:50</td>\n",
+       "      <td>8788</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -5745,46 +5745,46 @@
       ],
       "text/plain": [
        "        FECHA               NOW()  DIAS_DIFERENCIA\n",
-       "0  2000-10-22 2026-02-23 16:06:45             9255\n",
-       "1  2002-03-11 2026-02-23 16:06:45             8750\n",
-       "2  2002-05-26 2026-02-23 16:06:45             8674\n",
-       "3  2000-03-20 2026-02-23 16:06:45             9471\n",
-       "4  2000-09-13 2026-02-23 16:06:45             9294\n",
-       "5  2001-03-23 2026-02-23 16:06:45             9103\n",
-       "6  2000-04-11 2026-02-23 16:06:45             9449\n",
-       "7  2000-01-10 2026-02-23 16:06:45             9541\n",
-       "8  2002-09-24 2026-02-23 16:06:45             8553\n",
-       "9  2000-02-04 2026-02-23 16:06:45             9516\n",
-       "10 2001-05-23 2026-02-23 16:06:45             9042\n",
-       "11 2002-08-11 2026-02-23 16:06:45             8597\n",
-       "12 2001-07-03 2026-02-23 16:06:45             9001\n",
-       "13 2000-06-07 2026-02-23 16:06:45             9392\n",
-       "14 2000-04-17 2026-02-23 16:06:45             9443\n",
-       "15 2001-01-04 2026-02-23 16:06:45             9181\n",
-       "16 2001-02-02 2026-02-23 16:06:45             9152\n",
-       "17 2000-03-18 2026-02-23 16:06:45             9473\n",
-       "18 2001-01-15 2026-02-23 16:06:45             9170\n",
-       "19 2001-07-02 2026-02-23 16:06:45             9002\n",
-       "20 2001-09-04 2026-02-23 16:06:45             8938\n",
-       "21 2001-07-10 2026-02-23 16:06:45             8994\n",
-       "22 2000-11-11 2026-02-23 16:06:45             9235\n",
-       "23 2001-06-25 2026-02-23 16:06:45             9009\n",
-       "24 2000-11-25 2026-02-23 16:06:45             9221\n",
-       "25 2002-04-05 2026-02-23 16:06:45             8725\n",
-       "26 2002-07-04 2026-02-23 16:06:45             8635\n",
-       "27 2001-05-03 2026-02-23 16:06:45             9062\n",
-       "28 2002-02-20 2026-02-23 16:06:45             8769\n",
-       "29 2001-04-15 2026-02-23 16:06:45             9080\n",
-       "30 2002-01-03 2026-02-23 16:06:45             8817\n",
-       "31 2000-02-23 2026-02-23 16:06:45             9497\n",
-       "32 2001-05-27 2026-02-23 16:06:45             9038\n",
-       "33 2002-08-10 2026-02-23 16:06:45             8598\n",
-       "34 2002-07-04 2026-02-23 16:06:45             8635\n",
-       "35 2002-05-12 2026-02-23 16:06:45             8688\n",
-       "36 2000-02-14 2026-02-23 16:06:45             9506\n",
-       "37 2002-09-02 2026-02-23 16:06:45             8575\n",
-       "38 2002-05-05 2026-02-23 16:06:45             8695\n",
-       "39 2002-02-02 2026-02-23 16:06:45             8787"
+       "0  2000-10-22 2026-02-24 15:32:50             9256\n",
+       "1  2002-03-11 2026-02-24 15:32:50             8751\n",
+       "2  2002-05-26 2026-02-24 15:32:50             8675\n",
+       "3  2000-03-20 2026-02-24 15:32:50             9472\n",
+       "4  2000-09-13 2026-02-24 15:32:50             9295\n",
+       "5  2001-03-23 2026-02-24 15:32:50             9104\n",
+       "6  2000-04-11 2026-02-24 15:32:50             9450\n",
+       "7  2000-01-10 2026-02-24 15:32:50             9542\n",
+       "8  2002-09-24 2026-02-24 15:32:50             8554\n",
+       "9  2000-02-04 2026-02-24 15:32:50             9517\n",
+       "10 2001-05-23 2026-02-24 15:32:50             9043\n",
+       "11 2002-08-11 2026-02-24 15:32:50             8598\n",
+       "12 2001-07-03 2026-02-24 15:32:50             9002\n",
+       "13 2000-06-07 2026-02-24 15:32:50             9393\n",
+       "14 2000-04-17 2026-02-24 15:32:50             9444\n",
+       "15 2001-01-04 2026-02-24 15:32:50             9182\n",
+       "16 2001-02-02 2026-02-24 15:32:50             9153\n",
+       "17 2000-03-18 2026-02-24 15:32:50             9474\n",
+       "18 2001-01-15 2026-02-24 15:32:50             9171\n",
+       "19 2001-07-02 2026-02-24 15:32:50             9003\n",
+       "20 2001-09-04 2026-02-24 15:32:50             8939\n",
+       "21 2001-07-10 2026-02-24 15:32:50             8995\n",
+       "22 2000-11-11 2026-02-24 15:32:50             9236\n",
+       "23 2001-06-25 2026-02-24 15:32:50             9010\n",
+       "24 2000-11-25 2026-02-24 15:32:50             9222\n",
+       "25 2002-04-05 2026-02-24 15:32:50             8726\n",
+       "26 2002-07-04 2026-02-24 15:32:50             8636\n",
+       "27 2001-05-03 2026-02-24 15:32:50             9063\n",
+       "28 2002-02-20 2026-02-24 15:32:50             8770\n",
+       "29 2001-04-15 2026-02-24 15:32:50             9081\n",
+       "30 2002-01-03 2026-02-24 15:32:50             8818\n",
+       "31 2000-02-23 2026-02-24 15:32:50             9498\n",
+       "32 2001-05-27 2026-02-24 15:32:50             9039\n",
+       "33 2002-08-10 2026-02-24 15:32:50             8599\n",
+       "34 2002-07-04 2026-02-24 15:32:50             8636\n",
+       "35 2002-05-12 2026-02-24 15:32:50             8689\n",
+       "36 2000-02-14 2026-02-24 15:32:50             9507\n",
+       "37 2002-09-02 2026-02-24 15:32:50             8576\n",
+       "38 2002-05-05 2026-02-24 15:32:50             8696\n",
+       "39 2002-02-02 2026-02-24 15:32:50             8788"
       ]
      },
      "execution_count": 33,
@@ -7019,7 +7019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "47001766",
    "metadata": {},
    "outputs": [
@@ -7325,7 +7325,7 @@
        "19 2002-02-02          0       ESPAÑA  None  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7338,7 +7338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "id": "ed8bfc5d",
    "metadata": {},
    "outputs": [
@@ -7540,7 +7540,7 @@
        "11          0        JAPÓN  None  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7548,6 +7548,24 @@
    "source": [
     "pd.read_sql(\"SELECT * FROM productos WHERE PRECIO >500 UNION SELECT * FROM ProductosNuevos WHERE SECCIÓN ='ALTA COSTURA' ORDER BY SECCIÓN\", engine)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7495886f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_sql(\"SELECT * FROM \",engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "122caf89",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
