--- a/python/practica_matplotlib.ipynb
+++ b/python/practica_matplotlib.ipynb
@@ -37,7 +37,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python",
+   "display_name": "python-practice",
    "language": "python",
    "name": "python3"
   },
